--- a/src/Pages/home.css
+++ b/src/Pages/home.css
@@ -8,7 +8,7 @@
 .container-title {
   width: 100vw;
   height: 80vh;
-  background-image: url('./corniche.JPG'); 
+  background-image: url('./corniche.png'); 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
