--- a/src/Pages/services.css
+++ b/src/Pages/services.css
@@ -75,36 +75,35 @@
   overflow: hidden;
   width: 100vw;
   height: 70vh;
+  justify-content: center; /* Center Swiper horizontally */
+  align-items: center; /* Center Swiper vertically */
   position: relative;
   text-align: center;
 }
 
 .slider-container h1 {
   padding-top: 5vh;
+  padding-bottom: 2vh;
 }
 
-.slider {
-  padding: 5vh 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.card {
-  height: 40vh;
-  width: 200px;
+.swiper-slide {
+  width: 33vw !important;
+  height: 50vh !important;
   padding: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   border-radius: 50px;
   border: 2px solid black;
   background-color: #303c6a;
   color: beige;
-  text-align: center;
   margin: 0 1vw;
   transition: transform 0.3s ease;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+.swiper-button-next,
+.swiper-button-prev {
+    color: #ffffff !important; /* Or any other color */
+    z-index: 10; /* Ensure they are on top of other elements */
 }
 
 .card a {
@@ -177,14 +176,17 @@
   }
 
   .slider-container {
-    height: 65vh;
-    padding: 0 2rem;
+    height: 60vh;
   }
 
-  .card {
-    width: 180px;
-    height: 35vh;
-    margin: 0 2vw;
+  .swiper-slide{
+    width: 350px !important;
+    height: 35vh !important;
+  }
+
+  .swiper-slide li {
+    display: none;
+    
   }
 }
 
@@ -229,11 +231,16 @@
 
   .slider-container {
     height: 50vh;
+    width: 100vw;
   }
 
-  .card {
-    width: 120px;
-    height: 25vh;
+  .swiper-slide {
+    width: 300px !important;
+    height: 30vh !important;
+  }
+
+  .swiper-slide li {
+    display: none;
   }
 
   .focus3 li {
