--- a/src/Pages/contact.css
+++ b/src/Pages/contact.css
@@ -33,7 +33,7 @@
   justify-content: center;
   align-items: center;
   padding-top: 150px;
-  padding-bottom: 150px;
+  padding-bottom: 100px;
 }
 
 .contact-info {
@@ -73,12 +73,10 @@
   text-decoration: none;
 }
 
-/* Media Queries for Responsiveness */
 
-/* For tablets and smaller screens */
 @media (max-width: 768px) {
   .title-contact {
-    font-size: 45px; /* Adjust font size */
+    font-size: 45px; 
   }
   
   .info {
@@ -87,19 +85,19 @@
   }
 
   .contact-info {
-    flex-direction: column; /* Stack items vertically */
-    gap: 2rem; /* Reduce gap between items */
+    flex-direction: column; 
+    gap: 2rem; 
   }
 }
 
-/* For mobile phones */
+
 @media (max-width: 480px) {
   .container-title-contact {
-    height: 40vh; /* Adjust height for smaller screens */
+    height: 40vh; 
   }
 
   .title-contact {
-    font-size: 35px; /* Adjust font size */
+    font-size: 35px;
   }
 
   .info {
@@ -108,6 +106,6 @@
   }
 
   .contact-info {
-    gap: 1rem; /* Further reduce gap between items */
+    gap: 1rem;
   }
 }
